# speculative-decoding-from-scratch

./: .gitignore  README.md  pyproject.toml
docs/: TECHNICAL_DOCUMENTATION.md
examples/: run_demo.py
speculative_decoding/: __init__.py  config.py  decoder.py  exceptions.py  metrics.py
speculative_decoding/core/: __init__.py  kv_cache_manager.py  sampling.py  verifier.py
speculative_decoding/models/: __init__.py  base_model.py  draft_model.py  target_model.py
tests/: conftest.py
tests/integration/: test_decoder_loop.py  test_distribution_preservation.py  test_edge_cases.py
tests/stress/: test_performance.py
tests/unit/: test_config.py  test_kv_cache_manager.py  test_metrics.py  test_sampling.py  test_verifier.py
